package commerce

import (
	"context"
	"database/sql"
	"errors"
	"time"

	commonpb "github.com/nmxmxh/master-ovasabi/api/protos/common/v1"
)

type Quote struct {
	QuoteID   string             `db:"quote_id"`
	UserID    string             `db:"user_id"`
	ProductID string             `db:"product_id"`
	Amount    float64            `db:"amount"`
	Currency  string             `db:"currency"`
	Status    string             `db:"status"`
	Metadata  *commonpb.Metadata `db:"metadata"`
	CreatedAt time.Time          `db:"created_at"`
	UpdatedAt time.Time          `db:"updated_at"`
}

type Order struct {
	OrderID   string             `db:"order_id"`
	UserID    string             `db:"user_id"`
	Items     []OrderItem        // Not directly mapped, loaded separately
	Total     float64            `db:"total"`
	Currency  string             `db:"currency"`
	Status    string             `db:"status"`
	Metadata  *commonpb.Metadata `db:"metadata"`
	CreatedAt time.Time          `db:"created_at"`
	UpdatedAt time.Time          `db:"updated_at"`
}

type OrderItem struct {
	ID        int                `db:"id"`
	OrderID   string             `db:"order_id"`
	ProductID string             `db:"product_id"`
	Quantity  int                `db:"quantity"`
	Price     float64            `db:"price"`
	Metadata  *commonpb.Metadata `db:"metadata"`
}

type Payment struct {
	PaymentID string             `db:"payment_id"`
	OrderID   string             `db:"order_id"`
	UserID    string             `db:"user_id"`
	Amount    float64            `db:"amount"`
	Currency  string             `db:"currency"`
	Method    string             `db:"method"`
	Status    string             `db:"status"`
	Metadata  *commonpb.Metadata `db:"metadata"`
	CreatedAt time.Time          `db:"created_at"`
	UpdatedAt time.Time          `db:"updated_at"`
}

type Transaction struct {
	TransactionID string             `db:"transaction_id"`
	PaymentID     string             `db:"payment_id"`
	UserID        string             `db:"user_id"`
	Type          string             `db:"type"`
	Amount        float64            `db:"amount"`
	Currency      string             `db:"currency"`
	Status        string             `db:"status"`
	Metadata      *commonpb.Metadata `db:"metadata"`
	CreatedAt     time.Time          `db:"created_at"`
	UpdatedAt     time.Time          `db:"updated_at"`
}

type Balance struct {
	UserID    string    `db:"user_id"`
	Currency  string    `db:"currency"`
	Amount    float64   `db:"amount"`
	UpdatedAt time.Time `db:"updated_at"`
}

type Event struct {
	EventID    string                 `db:"event_id"`
	EntityID   string                 `db:"entity_id"`
	EntityType string                 `db:"entity_type"`
	EventType  string                 `db:"event_type"`
	Payload    map[string]interface{} `db:"payload"`
	CreatedAt  time.Time              `db:"created_at"`
}

type Repository interface {
	// Quotes
	CreateQuote(ctx context.Context, q *Quote) error
	GetQuote(ctx context.Context, quoteID string) (*Quote, error)
	ListQuotes(ctx context.Context, userID string, page, pageSize int) ([]*Quote, int, error)

	// Orders
	CreateOrder(ctx context.Context, o *Order) error
	GetOrder(ctx context.Context, orderID string) (*Order, error)
	ListOrders(ctx context.Context, userID string, page, pageSize int) ([]*Order, int, error)
	UpdateOrderStatus(ctx context.Context, orderID string, status string) error
	ListOrderItems(ctx context.Context, orderID string) ([]*OrderItem, error)

	// Payments
	CreatePayment(ctx context.Context, p *Payment) error
	GetPayment(ctx context.Context, paymentID string) (*Payment, error)
	UpdatePaymentStatus(ctx context.Context, paymentID string, status string) error

	// Transactions
	CreateTransaction(ctx context.Context, t *Transaction) error
	GetTransaction(ctx context.Context, transactionID string) (*Transaction, error)
	ListTransactions(ctx context.Context, userID string, page, pageSize int) ([]*Transaction, int, error)

	// Balances
	GetBalance(ctx context.Context, userID, currency string) (*Balance, error)
	ListBalances(ctx context.Context, userID string) ([]*Balance, error)
	UpdateBalance(ctx context.Context, userID, currency string, amount float64) error

	// Events
	LogEvent(ctx context.Context, e *Event) error
	ListEvents(ctx context.Context, entityID, entityType string, page, pageSize int) ([]*Event, int, error)
}

type RepositoryImpl struct {
	db *sql.DB
}

func NewRepository(db *sql.DB) *RepositoryImpl {
	return &RepositoryImpl{db: db}
}

// Quotes.
func (r *RepositoryImpl) CreateQuote(_ context.Context, _ *Quote) error {
	// TODO: implement CreateQuote logic
	return errors.New("not implemented")
}

func (r *RepositoryImpl) GetQuote(_ context.Context, _ string) (*Quote, error) {
	// TODO: implement GetQuote logic
	return nil, errors.New("not implemented")
}

func (r *RepositoryImpl) ListQuotes(_ context.Context, _ string, _, _ int) ([]*Quote, int, error) {
	// TODO: implement ListQuotes logic
	return nil, 0, errors.New("not implemented")
}

// Orders.
func (r *RepositoryImpl) CreateOrder(_ context.Context, _ *Order) error {
	// TODO: implement CreateOrder logic
	return errors.New("not implemented")
}

func (r *RepositoryImpl) GetOrder(_ context.Context, _ string) (*Order, error) {
	// TODO: implement GetOrder logic
	return nil, errors.New("not implemented")
}

func (r *RepositoryImpl) ListOrders(_ context.Context, _ string, _, _ int) ([]*Order, int, error) {
	// TODO: implement ListOrders logic
	return nil, 0, errors.New("not implemented")
}

func (r *RepositoryImpl) UpdateOrderStatus(_ context.Context, _, _ string) error {
	// TODO: implement UpdateOrderStatus logic
	return errors.New("not implemented")
}

func (r *RepositoryImpl) ListOrderItems(_ context.Context, _ string) ([]*OrderItem, error) {
	// TODO: implement ListOrderItems logic
	return nil, errors.New("not implemented")
}

// Payments.
func (r *RepositoryImpl) CreatePayment(_ context.Context, _ *Payment) error {
	// TODO: implement CreatePayment logic
	return errors.New("not implemented")
}

func (r *RepositoryImpl) GetPayment(_ context.Context, _ string) (*Payment, error) {
	// TODO: implement GetPayment logic
	return nil, errors.New("not implemented")
}

func (r *RepositoryImpl) UpdatePaymentStatus(_ context.Context, _, _ string) error {
	// TODO: implement UpdatePaymentStatus logic
	return errors.New("not implemented")
}

// Transactions.
func (r *RepositoryImpl) CreateTransaction(_ context.Context, _ *Transaction) error {
	// TODO: implement CreateTransaction logic
	return errors.New("not implemented")
}

func (r *RepositoryImpl) GetTransaction(_ context.Context, _ string) (*Transaction, error) {
	// TODO: implement GetTransaction logic
	return nil, errors.New("not implemented")
}

func (r *RepositoryImpl) ListTransactions(_ context.Context, _ string, _, _ int) ([]*Transaction, int, error) {
	// TODO: implement ListTransactions logic
	return nil, 0, errors.New("not implemented")
}

// Balances.
func (r *RepositoryImpl) GetBalance(_ context.Context, _, _ string) (*Balance, error) {
	// TODO: implement GetBalance logic
	return nil, errors.New("not implemented")
}

func (r *RepositoryImpl) ListBalances(_ context.Context, _ string) ([]*Balance, error) {
	// TODO: implement ListBalances logic
	return nil, errors.New("not implemented")
}

func (r *RepositoryImpl) UpdateBalance(_ context.Context, _, _ string, _ float64) error {
	// TODO: implement UpdateBalance logic
	return errors.New("not implemented")
}

// Events.
func (r *RepositoryImpl) LogEvent(_ context.Context, _ *Event) error {
	// TODO: implement LogEvent logic
	return errors.New("not implemented")
}

func (r *RepositoryImpl) ListEvents(_ context.Context, _, _ string, _, _ int) ([]*Event, int, error) {
	// TODO: implement ListEvents logic
	return nil, 0, errors.New("not implemented")
}
