package commerce

import (
	"context"
	"time"

	commercepb "github.com/nmxmxh/master-ovasabi/api/protos/commerce/v1"
	"github.com/nmxmxh/master-ovasabi/internal/repository/commerce"
	pattern "github.com/nmxmxh/master-ovasabi/internal/service/pattern"
	"github.com/nmxmxh/master-ovasabi/pkg/redis"
	"go.uber.org/zap"
	"google.golang.org/grpc/codes"
	"google.golang.org/grpc/status"
)

type Service struct {
	commercepb.UnimplementedCommerceServiceServer
	log   *zap.Logger
	repo  commerce.Repository
	Cache *redis.Cache
}

func NewService(log *zap.Logger, repo commerce.Repository, cache *redis.Cache) commercepb.CommerceServiceServer {
	return &Service{
		log:   log,
		repo:  repo,
		Cache: cache,
	}
}

// TODO (Amadeus Context): Implement CreateQuote following the canonical metadata pattern.
// Reference: docs/amadeus/amadeus_context.md, section 'Canonical Metadata Integration Pattern (System-Wide)'.
// Steps: Validate metadata, store as jsonb, call pattern helpers, handle/log all errors.
func (s *Service) CreateQuote(ctx context.Context, req *commercepb.CreateQuoteRequest) (*commercepb.CreateQuoteResponse, error) {
	// TODO: Implement full logic. See Amadeus context for canonical pattern.
	// Example stub for orchestration integration:
	if req.Metadata != nil {
		quoteID := req.UserId + ":" + req.ProductId // Placeholder for unique quote ID logic
		err := pattern.CacheMetadata(ctx, s.log, s.Cache, "quote", quoteID, req.Metadata, 10*time.Minute)
		if err != nil {
			s.log.Error("failed to cache metadata", zap.Error(err))
		}
		err = pattern.RegisterSchedule(ctx, s.log, "quote", quoteID, req.Metadata)
		if err != nil {
			s.log.Error("failed to register schedule", zap.Error(err))
		}
		err = pattern.EnrichKnowledgeGraph(ctx, s.log, "quote", quoteID, req.Metadata)
		if err != nil {
			s.log.Error("failed to enrich knowledge graph", zap.Error(err))
		}
		err = pattern.RegisterWithNexus(ctx, s.log, "quote", req.Metadata)
		if err != nil {
			s.log.Error("failed to register with nexus", zap.Error(err))
		}
	}
	return nil, status.Error(codes.Unimplemented, "CreateQuote not yet implemented")
}

// TODO: Implement get quote logic (fetch by ID, handle not found, return proto).
func (s *Service) GetQuote(_ context.Context, _ *commercepb.GetQuoteRequest) (*commercepb.GetQuoteResponse, error) {
	return nil, status.Error(codes.Unimplemented, "GetQuote not yet implemented")
}

// TODO: Implement list quotes logic (pagination, filtering, call repo.ListQuotes, return response).
func (s *Service) ListQuotes(_ context.Context, _ *commercepb.ListQuotesRequest) (*commercepb.ListQuotesResponse, error) {
	return nil, status.Error(codes.Unimplemented, "ListQuotes not yet implemented")
}

// TODO (Amadeus Context): Implement CreateOrder following the canonical metadata pattern.
// Reference: docs/amadeus/amadeus_context.md, section 'Canonical Metadata Integration Pattern (System-Wide)'.
func (s *Service) CreateOrder(ctx context.Context, req *commercepb.CreateOrderRequest) (*commercepb.CreateOrderResponse, error) {
	// TODO: Implement full logic. See Amadeus context for canonical pattern.
	if req.Metadata != nil {
		orderID := req.UserId + ":order" // Placeholder for unique order ID logic
		err := pattern.CacheMetadata(ctx, s.log, s.Cache, "order", orderID, req.Metadata, 10*time.Minute)
		if err != nil {
			s.log.Error("failed to cache metadata", zap.Error(err))
		}
		err = pattern.RegisterSchedule(ctx, s.log, "order", orderID, req.Metadata)
		if err != nil {
			s.log.Error("failed to register schedule", zap.Error(err))
		}
		err = pattern.EnrichKnowledgeGraph(ctx, s.log, "order", orderID, req.Metadata)
		if err != nil {
			s.log.Error("failed to enrich knowledge graph", zap.Error(err))
		}
		err = pattern.RegisterWithNexus(ctx, s.log, "order", req.Metadata)
		if err != nil {
			s.log.Error("failed to register with nexus", zap.Error(err))
		}
	}
	return nil, status.Error(codes.Unimplemented, "CreateOrder not yet implemented")
}

// TODO: Implement get order logic (fetch by ID, handle not found, return proto).
func (s *Service) GetOrder(_ context.Context, _ *commercepb.GetOrderRequest) (*commercepb.GetOrderResponse, error) {
	return nil, status.Error(codes.Unimplemented, "GetOrder not yet implemented")
}

// TODO: Implement list orders logic (pagination, filtering, call repo.ListOrders, return response).
func (s *Service) ListOrders(_ context.Context, _ *commercepb.ListOrdersRequest) (*commercepb.ListOrdersResponse, error) {
	return nil, status.Error(codes.Unimplemented, "ListOrders not yet implemented")
}

// TODO (Amadeus Context): Implement UpdateOrderStatus following the canonical metadata pattern.
// Reference: docs/amadeus/amadeus_context.md, section 'Canonical Metadata Integration Pattern (System-Wide)'.
func (s *Service) UpdateOrderStatus(_ context.Context, _ *commercepb.UpdateOrderStatusRequest) (*commercepb.UpdateOrderStatusResponse, error) {
	// TODO: Implement full logic. See Amadeus context for canonical pattern.
	// Note: UpdateOrderStatusRequest does not have metadata in proto, so this is a placeholder for future extension.
	// If metadata is added, use the same pattern as above.
	return nil, status.Error(codes.Unimplemented, "UpdateOrderStatus not yet implemented")
}

// TODO: Implement payment initiation logic (validate, call repo.CreatePayment, handle errors, return response).
func (s *Service) InitiatePayment(_ context.Context, _ *commercepb.InitiatePaymentRequest) (*commercepb.InitiatePaymentResponse, error) {
	return nil, status.Error(codes.Unimplemented, "InitiatePayment not yet implemented")
}

// TODO: Implement payment confirmation logic (validate, call repo.ConfirmPayment, handle errors, return response).
func (s *Service) ConfirmPayment(_ context.Context, _ *commercepb.ConfirmPaymentRequest) (*commercepb.ConfirmPaymentResponse, error) {
	return nil, status.Error(codes.Unimplemented, "ConfirmPayment not yet implemented")
}

// TODO: Implement payment refund logic (validate, call repo.RefundPayment, handle errors, return response).
func (s *Service) RefundPayment(_ context.Context, _ *commercepb.RefundPaymentRequest) (*commercepb.RefundPaymentResponse, error) {
	return nil, status.Error(codes.Unimplemented, "RefundPayment not yet implemented")
}

// TODO: Implement get transaction logic (fetch by ID, handle not found, return proto).
func (s *Service) GetTransaction(_ context.Context, _ *commercepb.GetTransactionRequest) (*commercepb.GetTransactionResponse, error) {
	return nil, status.Error(codes.Unimplemented, "GetTransaction not yet implemented")
}

// TODO: Implement list transactions logic (pagination, filtering, call repo.ListTransactions, return response).
func (s *Service) ListTransactions(_ context.Context, _ *commercepb.ListTransactionsRequest) (*commercepb.ListTransactionsResponse, error) {
	return nil, status.Error(codes.Unimplemented, "ListTransactions not yet implemented")
}

// TODO: Implement get balance logic (fetch by user/currency, call repo.GetBalance, return response).
func (s *Service) GetBalance(_ context.Context, _ *commercepb.GetBalanceRequest) (*commercepb.GetBalanceResponse, error) {
	return nil, status.Error(codes.Unimplemented, "GetBalance not yet implemented")
}

// TODO: Implement list balances logic (fetch all balances for user, call repo.ListBalances, return response).
func (s *Service) ListBalances(_ context.Context, _ *commercepb.ListBalancesRequest) (*commercepb.ListBalancesResponse, error) {
	return nil, status.Error(codes.Unimplemented, "ListBalances not yet implemented")
}

// TODO: Implement list events logic (fetch events for entity, call repo.ListEvents, return response).
func (s *Service) ListEvents(_ context.Context, _ *commercepb.ListEventsRequest) (*commercepb.ListEventsResponse, error) {
	return nil, status.Error(codes.Unimplemented, "ListEvents not yet implemented")
}
